src/app/app.component.scss
@import '../styles';

body {
  margin: 0;
}

header {
  display: flex;
  flex-direction: row;
  position: fixed;
  overflow: hidden;
  width: 100%;
  top: 0;
  z-index: 2;
  text-align: center;
  background-color: white;
  font-size: 15px;
  height: 55px;
  box-shadow: 1px 1px 20px rgb(53, 52, 53);

  nav {
    width: 100%;
    height: 100%;
    list-style-type: none;
    display: inline-flex;

    a {
      display: flex;
      align-items: center;
      justify-content: center;
      text-decoration: none;
      color: rgb(19, 116, 0);
      width: 8%;
      height: 100%;


      &:hover {
        background-color: rgb(216, 216, 216);
      }

    }
    p {
      display: flex;
      align-items: center;
      text-decoration: none;
      color: rgb(19, 116, 0);
      width: 10%;
      margin: 15px;
      font-size: 15px;
      img {
        vertical-align: top;
      }
    }
    .right-align {
      margin-left: auto;
    }
  }
}

